# SolanaPay

./: .env.example  AI_MIGRATION_GUIDE.md  CONSUMER_FLOWS_DEMO.md  CROSS_CHAIN_BRIDGE_SETUP.md  ENHANCED_AUTH_SETUP.md  README.md  SOLANAPAY_SETUP.md  package-lock.json  package.json  test-ai-integration.js  test-cross-chain-bridge.js  test-solanapay-integration.js
backend/: .env.example  server.js  test-gamification.js
backend/middleware/: authMiddleware.js
backend/prisma/: schema.prisma
backend/routes/: aiRewards.js  compliance.js  did.js  leaderboards.js  nftBadges.js  onramp.js  quests.js  rewardsRecommendation.ts  sbt.js  streaks.js
backend/scripts/: init-db.js
backend/services/: GamificationIntegration.js  aiAnomalyDetection.js  aiRecommendationService.ts  localAIService.js  rewardRedemptionService.js
backend/src/: index.ts  server.ts
backend/src/routes/: auth.ts  email.ts  graphql.ts  merchant.ts  wallet.ts
backend/src/services/: circleService.ts
backend/src/utils/: logger.ts
contracts/contracts/: VPayEscrow.sol  VPayPayments.sol  VPayRewards.sol  VPaySoulboundToken.sol  VPayToken.sol
contracts/programs/asset-converter/: Cargo.toml
contracts/programs/asset-converter/src/: lib.rs
contracts/programs/asset-indexer/: Cargo.toml
contracts/programs/asset-indexer/src/: lib.rs
contracts/programs/bounty-system/: Cargo.toml
contracts/programs/bounty-system/src/: lib.rs
contracts/programs/coffee-shop/: Cargo.toml
contracts/programs/coffee-shop/src/: lib.rs
contracts/programs/community-leaderboard/: Cargo.toml
contracts/programs/community-leaderboard/src/: lib.rs
contracts/programs/cross-chain-identity/: Cargo.toml
contracts/programs/cross-chain-identity/src/: lib.rs
contracts/programs/escrow-arbitration/: Cargo.toml
contracts/programs/escrow-arbitration/src/: lib.rs
contracts/programs/fiat-bridge/: Cargo.toml
contracts/programs/fiat-bridge/src/: lib.rs
contracts/programs/fraud-detection/: Cargo.toml
contracts/programs/fraud-detection/src/: lib.rs
contracts/programs/helpbot/: Anchor.toml  Cargo.toml
contracts/programs/helpbot/src/: lib.rs
contracts/programs/helpbot/tests/: helpbot.ts
contracts/programs/kyc-verification/: Cargo.toml
contracts/programs/kyc-verification/src/: lib.rs
contracts/programs/merchant-analytics/: Cargo.toml
contracts/programs/merchant-analytics/src/: lib.rs
contracts/programs/merchant-rewards/: Cargo.toml
contracts/programs/merchant-rewards/src/: lib.rs
contracts/programs/ngo-rewards/: Cargo.toml
contracts/programs/ngo-rewards/src/: lib.rs
contracts/programs/quest-rewards/: Cargo.toml
contracts/programs/quest-rewards/src/: lib.rs
contracts/programs/solanapay-payments/: Cargo.toml
contracts/programs/solanapay-payments/src/: lib.rs
contracts/scripts/: deploy.js  verify.js
frontend/: .env.example  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CrossChainWallet.tsx  EnhancedLogin.tsx  KYCQuickApproval.tsx  KYCVerification.tsx  WalletConnect.jsx
frontend/src/components/auth/: DIDAuthFlow.tsx  ProtectedRoute.tsx
frontend/src/components/bridge/: CrossChainBridge.tsx
frontend/src/components/chat/: AIFAQChatbot.tsx  ChatSuggestions.tsx  ChatWindow.tsx  ChatWindowEnhanced.tsx  ChatWindowMobile.tsx  MerchantCustomerChat.tsx  RealTimeChatWindow.tsx  UnifiedMessaging.tsx
frontend/src/components/common/: DisplayName.tsx
frontend/src/components/demos/: CoffeeShopDemo.tsx  NGOVolunteerDemo.tsx
frontend/src/components/fiat/: FiatBridge.tsx
frontend/src/components/gamification/: GamifiedLoyaltyDashboard.tsx  LeaderboardDashboard.tsx  NFTBadgeCollection.tsx  QuestDashboard.tsx  StreakTracker.tsx
frontend/src/components/layout/: BottomNav.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/loyalty/: LoyaltyDashboard.tsx
frontend/src/components/merchant/: MerchantChainConfig.tsx
frontend/src/components/notifications/: NotificationBell.tsx  NotificationCenter.tsx
frontend/src/components/payments/: CashbackNFTDisplay.tsx  PaymentHistory.tsx  SolanaPaymentInterface.tsx
frontend/src/components/rewards/: PersonalizedRewards.tsx  RewardAnalyticsDashboard.tsx  RewardNotifications.tsx
frontend/src/components/transactions/: MultiChainTransactionHistory.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/wallet/: UnifiedWalletDashboard.tsx
frontend/src/config/: programIds.ts  wagmi.ts
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx  DIDContext.tsx  SBTContext.tsx  SolanaWalletContext.tsx  ThemeContext.tsx  WalletContext.tsx
frontend/src/hooks/: usePersonalizedRewards.ts
frontend/src/idl/: asset_converter.json
frontend/src/lib/: utils.ts
frontend/src/pages/: BountyMarketplace.tsx  CommunityLeaderboard.tsx  EscrowArbitration.tsx  HomePage.tsx  KYCPage.tsx  LandingPage.tsx  MerchantDashboard.tsx  ProfilePage.tsx  RewardsPage.tsx  TaskMarketplace.tsx  TasksPage.tsx  WalletDashboard.jsx  WalletDashboard.tsx  WalletPage.tsx
frontend/src/pages/auth/: ForgotPasswordPage.tsx  LoginPage.tsx  OnboardingPage.tsx  RegisterPage.tsx  SignupPage.tsx
frontend/src/pages/payments/: MerchantSettlementPage.tsx  ReceivePaymentPage.tsx  SendPaymentPage.tsx  (+1 more)
frontend/src/services/: api.ts  assetConverterService.ts  bountyService.ts  bridgeAbstractionService.ts  coffeeShopService.ts  communityLeaderboardService.ts  escrowArbitrationService.ts  fiatBridgeService.ts  fraudDetectionService.ts  kycService.ts  layerZeroBridgeService.ts  localAIService.ts  multiChainBalanceService.ts  ngoRewardsService.ts  notificationService.ts  questRewardsService.ts  snsService.ts  solanaPayService.ts  soulboundNFTService.ts  verychatPrompts.ts  verychatService.ts  web3AuthService.ts  wormholeBridgeService.ts
frontend/src/types/: asset_converter.ts
plugins/shopify/: solanapay-shopify-plugin.js
plugins/woocommerce/: solanapay-woocommerce-plugin.php
scripts/: deploy-devnet.ps1  monitor.js  setup-env.ps1  test-fiat-bridge.js
src/app/: providers.tsx
src/contexts/: WalletContext.tsx
src/lib/: web3auth.ts
src/sdk/: index.ts
(+1 files in other folders)
