[package]
name = "asset-converter"
version = "0.1.0"
description = "Solana program for automatic wrapped asset conversion"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_converter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }
