[package]
name = "asset-indexer"
version = "0.1.0"
description = "Real-time Solana asset indexing and synchronization system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_indexer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
mpl-token-metadata = "1.13.2"
solana-program = "1.16.0"
borsh = "0.10.3"
