[package]
name = "bounty-system"
version = "0.1.0"
description = "SolanaPay Bounty System for Micro-Tasks with NFT Proof of Completion"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bounty_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
switchboard-v2 = "0.4.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = "1.0"
