[package]
name = "coffee-shop"
version = "0.1.0"
description = "Coffee shop payment processing with instant stablecoin payouts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "coffee_shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
