[package]
name = "fraud-detection"
version = "0.1.0"
description = "Advanced fraud detection and compliance monitoring for Solana transactions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fraud_detection"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
solana-program = "1.16.0"
borsh = "0.10.3"
switchboard-v2 = "0.4.0"
