[package]
name = "solanapay-helpbot"
version = "0.1.0"
description = "On-chain help-bot for SolanaPay platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanapay_helpbot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros"] }
