[package]
name = "kyc-verification"
version = "0.1.0"
description = "KYC Verification and SBT Minting Program"
edition = "2021"
license = "AGPL-3.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"

[dev-dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }

[workspace]
members = []
resolver = "2"
