[package]
name = "merchant-analytics"
version = "0.1.0"
description = "SolanaPay Merchant Analytics & Loyalty Rewards Rust Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merchant_analytics"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

[dev-dependencies]
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
tokio = "1.0"
