[package]
name = "ngo-rewards"
version = "0.1.0"
description = "NGO volunteer task validation and micro-reward NFT system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ngo_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
